--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-ECHO is on.
+<!-- HTML HERE COMMENTS-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>fuel Station Online | Home</title>
+    <link rel="stylesheet" href="index.css">
+
+    <!-- Internal Styles -->
+    <style>
+        /* Basic css syntax 
+           css selector{
+             property:value;
+           }
+        */
+        body{ 
+            /* background-color: brown;         */
+        }
+        main{
+            /* background-color: aqua; */
+        }
+
+
+    </style>
+</head>
+<!-- There  3 main ways to include css styling in html
+   1. Inline styling
+   2. Internal styling 
+   3. External styling
+-->
+<body>
+    <main style=" height: 100vh; ">
+         <header>
+              <!-- Logo below -->
+              <h4 style="color: blue; ">StationMaster</h4>
+              <nav>
+                 <ul >
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Contact</a></li>
+                 </ul>
+              </nav>
+         </header>
+         <section class="section" id="section_one">
+            <p id="para1">Lorem ipsum dolor sit amet.</p>
+         </section >
+         <section class="section" id="section_two">
+            <p id="para2">Lorem ipsum dolor sit amet.</p>
+           </section>
+         <section class="section" id="section_three">
+            <p id="para3">Lorem ipsum dolor sit amet.</p>
+           </section>
+    </main>
+   
+</body>
+</html>
+
