flexbox mobile design

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>fuel Station Online | Home</title>
+</head>
+<body>
+   <main>
+      <header>
+         <!---Logo Below-->
+         <h4>StationMaster</h4>
+         <!--Mobile Menu Button-->
+         <button class="menuButtonContainer">
+            <span class="hamburger"></span>
+         </button>
+         <!--Navigation bar below : hidden mobile view-->
+         <nav class="navbar">
+            <ul class="list">
+               <li class="item"><a href="" class="link"></a></li>
+               <li class="item"><a href="" class="link"></a></li>
+               <li class="item"><a href="" class="link"></a></li>
+               <li class="item"><a href="" class="link"></a></li>
+            </ul>
+               </li>
+            </ul>
+            <div class="mobile">
+               <a href="#" class="login">Login</a>
+               <a href="#" class="register">Signup</a>
+            </div>
+            
+         </nav>
+         <div class="desktop">
+               <a href="#" class="login">Login</a>
+               <a href="#" class="register">Signup</a>
+            </div>
+      </header>
+   </main>
+</body>
+</html>
